<resources>
    <string name="app_name">Movie App</string>
    <string name="title_activity_main">Movie App</string>
    <string name="title_fragment_movies">Movie App</string>
    <string name="title_fragment_detail">Detail Movie</string>
    <string name="action_settings">Settings</string>
    <string name="image_content_description">Imagen</string>
    <string name="notification">Aviso</string>
    <string name="ok">Aceptar</string>
    <string name="retry">Reintentar</string>

    <!-- ERRORES -->
    <string name="E001">Comprueba tu conexión a internet</string>
    <string name="E002">Comprueba tu conexión a internet</string>
    <string name="unknown_error_message">No fue posible obtener la información. Error: %1$s</string>

    <string name="runtime">Duración:</string>
    <string name="release_date">Fecha de estreno:</string>
    <string name="vote_average">Calificación:</string>
    <string name="genres">Géneros:</string>
    <string name="overview">Descripción:</string>
    <string name="minutes">min</string>
</resources>
